--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,6 @@ body{
 }
 .hero-btn:hover {
     background-color: #5f65ec;
-    /*border-color: #5f65ec;*/
-    /*border-radius: 30px;*/
 }
 
 .home-section {
@@ -24,21 +22,6 @@ body{
     z-index: 0;
     overflow: hidden;
     height: 100vh; /* Ensure the video stays within the section */
-}
-
-#video-background {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-    transform: translate(-50%, -50%);
-    background-size: cover;
-    /*filter: brightness(0.7); !* Optional: add a filter for better text visibility *!*/
-    filter: grayscale(50%) brightness(0.5);
 }
 
 .logo-img {
@@ -144,7 +127,7 @@ body{
 
 /* Toggler styles */
 .navbar-toggler {
-    border: none;
+    border: none !important;
     padding: 0.5rem;
 }
 
@@ -202,23 +185,6 @@ p {
 
 
 /*services*/
-.creative-services {
-    /*background-color: #1e1e1e;*/
-}
-
-/*.service-card {*/
-/*    !*background-color: #2c2c2c !important;*!*/
-/*    background-color: rgba(44, 44, 44, 0.5) !important;*/
-/*    color: #ffffff;*/
-/*    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;*/
-/*    border: none;*/
-/*}*/
-
-/*.service-card:hover {*/
-/*    transform: scale(1.05);*/
-/*    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);*/
-/*}*/
-
 .service-icon {
     margin-bottom: 20px;
     color: #5f65ec; /* Vibrant purple accent */
@@ -269,9 +235,6 @@ p {
     width: 100%;
     height: 100%;
     background: rgba(38, 38, 38, 0.8);
-    /*background: linear-gradient(to bottom, rgba(0,0,0,0) 60%, rgba(0,0,0,0.8) 100%);*/
-    /*filter: blur(10px);*/
-    /*backdrop-filter: blur(10px);*/
 
     display: flex;
     flex-direction: column;
@@ -292,25 +255,12 @@ p {
     font-family: 'Aquire', sans-serif;
 }
 
-/*.btn-project {*/
-/*    background-color: #5f65ec;*/
-/*    border-color: #5f65ec;*/
-/*}*/
-
-/*.btn-project:hover {*/
-/*    background-color: #4147dc;*/
-/*    border-color: #4147dc;*/
-/*}*/
-
-
 /*contact us*/
 .contact-section {
-    /*background-color: #1e1e1e;*/
     padding: 80px 0;
 }
 
 .contact-form {
-    /*background-color: #2c2c2c;*/
     background-color: rgba(44, 44, 44, 0.5);;
     padding: 40px;
     border-radius: 10px;
@@ -351,28 +301,11 @@ p {
     border-radius: 10px;
 }
 
-/*.contact-info h4 {*/
-/*    color: #6a11cb;*/
-/*}*/
-/*.contact-info-item {*/
-/*    margin-bottom: 15px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.contact-info-item i {*/
-/*    color: #6a11cb;*/
-/*    margin-right: 15px;*/
-/*    font-size: 1.5rem;*/
-/*}*/
-
-
 /*footer*/
 .footer-dark {
     background-color: rgba(44, 44, 44, 0.5) ;
     padding: 60px 0;
     color: #a0a0a0;
-    /*padding-bottom: 0 !IMPORTANT;*/
-    /*padding-top: 0 !IMPORTANT;*/
 }
 
 .footer-dark h4 {
@@ -408,21 +341,6 @@ p {
     color: #5f65ec;
 }
 
-/*.newsletter-form .form-control {*/
-/*    background-color: #2c2c2c;*/
-/*    border: none;*/
-/*    color: #ffffff;*/
-/*}*/
-/*.newsletter-form .btn-newsletter {*/
-/*    background-color: #6a11cb;*/
-/*    border-color: #6a11cb;*/
-/*    color: #ffffff;*/
-/*}*/
-/*.newsletter-form .btn-newsletter:hover {*/
-/*    background-color: #5a0f9f;*/
-/*}*/
-
-
 /*partner section*/
 .partners-section {
     background-color: #1e1e1e;
@@ -438,21 +356,7 @@ p {
     transform: scale(1.1);
 }
 
-
-
 /*branding cards*/
-/*.branding-card {*/
-/*    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;*/
-/*    background-color: rgba(44, 44, 44, 0.5) !important;*/
-/*    !*border: none;*!*/
-/*    !*border-radius: 12px;*!*/
-/*    !*overflow: hidden;*!*/
-/*}*/
-
-/*.branding-card:hover {*/
-/*    transform: scale(1.05);*/
-/*}*/
-
 .logo-container {
     height: 180px;
     display: flex;
@@ -508,15 +412,6 @@ p {
 
 
 /*music section*/
-/*.music-card {*/
-/*    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;*/
-/*    background-color: rgba(44, 44, 44, 0.5) !important;*/
-/*}*/
-
-/*.music-card:hover {*/
-/*    transform: scale(1.05);*/
-/*}*/
-
 .music-card-cover {
     position: relative;
 }
